--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     >
       <div class="container">
         <a class="navbar-brand fw-bold d-flex align-items-center" href="#">
-          <img
-            src="https://ecomnow-images.s3.amazonaws.com/bht/21/cbp-public-resources/eComNowTeams%20Logo-Tri-Color-Dark.png"
-            alt="eComNowTeams Logo"
-            height="25"
+          <!-- <img
+            src="images/truewhite.png" 
+            alt="Atlantus Logo"
+            height="45"
             class="me-2"
-          />
+          /> -->
         </a>
         <button
           class="navbar-toggler"
@@ -45,7 +45,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div
-          class="collapse navbar-collapse justify-content-end fw-bold"
+          class="collapse navbar-collapse justify-content-center fw-bold"
           id="navbarNav"
         >
           <ul class="navbar-nav">
@@ -81,12 +81,21 @@
         </div>
       </div>
     </nav>
-    <section id="home" class="bg-dark text-white text-center">
+    <section id="home" class="bgdark1 text-white text-center">
       <div class="container">
-        <h1 class="display-4 mt-4 fw-bold">
+       
+        <div class="justify-content-center">
+          <img
+            src="images/blackatl.png
+        "
+            alt="Atlantus Partners"
+            class="img-fluid"
+            style="max-width: 50%; height: auto; margin-top: 20px"
+          />
+           <!-- <h1 class="display-4 mt-4 fw-bold">
           Next-Level Fundraising for Athletics
-        </h1>
-        <p class="lead mt-3">
+        </h1> -->
+        <!-- <p class="lead mt-3">
           A powerful platform for High School & College Athletic Departments and
           NIL Collectives to generate recurring revenue.
         </p>
@@ -98,14 +107,7 @@
           "
         >
           - Fundraising, Reinvented -
-        </h2>
-        <div class="justify-content-center">
-          <img
-            src="https://ecomnow-images.s3.amazonaws.com/bht/21/cbp-public-resources/donation.png"
-            alt="Donation Illustration"
-            class="img-fluid"
-            style="max-width: 80%; height: auto; margin-top: 40px"
-          />
+        </h2> -->
         </div>
       </div>
     </section>
