changes to site

--- a/index.html
+++ b/index.html
@@ -306,10 +306,10 @@
                 <a
                
                 >
-                 <b>Percy Helmer</b> 
+                 <!-- <b>Percy Helmer</b>  -->
                 </a>
               </p>
-              <p class="lead">(404) 441-0211</p>
+              <!-- <p class="lead">(404) 441-02xx</p> -->
             </div>
           </div>
         </div>
