--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link text-white underline-hover" href="#home"
+              <a class="fs-4 nav-link textg underline-hover" href="#home"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white underline-hover" href="#problem"
+              <a class="fs-4 nav-link textg underline-hover" href="#problem"
                 >Who We Are</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white underline-hover" href="#solution"
+              <a class="fs-4 nav-link textg underline-hover" href="#solution"
                 >Our Services</a
               >
             </li>
@@ -74,7 +74,7 @@
             </li> -->
         
             <li class="nav-item">
-              <a class="nav-link text-white underline-hover" href="#contact"
+              <a class="fs-4 nav-link textg underline-hover" href="#contact"
                 >Contact</a
               >
             </li>
@@ -91,7 +91,7 @@
             src="images/blackatl.png
         "
             alt="Atlantus Partners"
-            class="img-fluid"
+            class="img-fluid mb-4"
             style="max-width: 50%; height: auto; margin-top: 20px"
           />
           <!-- <h1 class="display-4 mt-4 fw-bold">
@@ -100,16 +100,16 @@
           <!-- <p class="lead mt-3">
           A powerful platform for High School & College Athletic Departments and
           NIL Collectives to generate recurring revenue.
-        </p>
+        </p> -->
         <h2
           style="
             font-family: 'Orbitron', sans-serif;
             font-size: 2.25rem;
-            color: #82e8fd;
+            color: #115067;
           "
         >
-          - Fundraising, Reinvented -
-        </h2> -->
+          - Strategic - Advisors -
+        </h2> 
         </div>
       </div>
 
@@ -141,7 +141,7 @@
       <!-- Solution Section -->
     </section>
     <section id="solution" class="bgdark1">
-      <div class="container">
+      <div class="container bg-dark rounded">
        
         <h3 class="text-white fw-bold mb-4 mt-4">Strategic Relationship Facilitation</h3>
         <p
