--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <p class="fw-bold">&mdash; Brands Like &mdash;</p>
         <div class="brand-logos justify-content-center">
           <img
-            src="https://ecomnow-images.s3.amazonaws.com/bht/21/cbp-public-resources/logos_demo.png"
+            src="g"
             alt="Brand Logos"
             class="img-fluid"
             style="max-width: 100%; height: auto; margin-top: 20px"
@@ -211,55 +211,55 @@
         <div class="row g-4">
           <div class="col-sm-6 col-md-4">
             <div class="team-member bg-light">
-              <h5>Robert Helmer</h5>
+              <h5>Robert</h5>
               <p class="text-secondary">Founder</p>
             </div>
           </div>
           <div class="col-sm-6 col-md-4">
             <div class="team-member bg-light">
-              <h5>Debra Strougo</h5>
+              <h5>Debra</h5>
               <p class="text-secondary">Business Development</p>
             </div>
           </div>
           <div class="col-sm-6 col-md-4">
             <div class="team-member bg-light">
-              <h5>Ashley Podoll</h5>
+              <h5>Ashley</h5>
               <p class="text-secondary">Marketing</p>
             </div>
           </div>
           <div class="col-sm-6 col-md-4">
             <div class="team-member bg-light">
-              <h5>Steve Vacendak</h5>
-              <p class="text-secondary">Former Iron Duke AD, Biz Dev</p>
+              <h5>Steve</h5>
+              <p class="text-secondary"> Biz Dev</p>
             </div>
           </div>
           <div class="col-sm-6 col-md-4">
             <div class="team-member bg-light">
-              <h5>Ray Mario</h5>
+              <h5>Ray</h5>
               <p class="text-secondary">Sr Marketing Manager</p>
             </div>
           </div>
           <div class="col-sm-6 col-md-4">
             <div class="team-member bg-light">
-              <h5>Trey Helmer</h5>
+              <h5>Trey</h5>
               <p class="text-secondary">Vendor Procurement</p>
             </div>
           </div>
           <div class="col-sm-6 col-md-4">
             <div class="team-member bg-light">
-              <h5>Steve Powell</h5>
+              <h5>Steve</h5>
               <p class="text-secondary">Advisor, Investor</p>
             </div>
           </div>
           <div class="col-sm-6 col-md-4">
             <div class="team-member bg-light">
-              <h5>Don Fish</h5>
-              <p class="text-secondary">Advisor, NC Sports Hall of Fame</p>
+              <h5>Don </h5>
+              <p class="text-secondary">Advisor/p>
             </div>
           </div>
           <div class="col-sm-6 col-md-4">
             <div class="team-member bg-light">
-              <h5>Eric McCarthey</h5>
+              <h5>Eric </h5>
               <p class="text-secondary">Advisor, Investor</p>
             </div>
           </div>
@@ -284,7 +284,7 @@
             </div>
             <div class="col-md-8 text-start">
               <p class="lead ps-3 border-start border-3 border-success">
-                <b>eComNowTeams</b> is built to drive revenue while supporting
+                <b>e</b> is built to drive revenue while supporting
                 your athletes - every purchase gives fans a reason to give back.
                 Let's connect and show you how to turn everyday shopping into
                 meaningful support for your team.
@@ -294,7 +294,7 @@
              
                 <img
                   src="images/Atlantuswhite.png"
-                  alt="eComNowTeams Logo"
+                  alt="AtlantusLogo"
                   height="200"
                   class="mb-3"
                 />
@@ -303,10 +303,10 @@
                 <a
                
                 >
-                 <!-- <b>Percy Helmer</b>  -->
+                 <b>Jameson Smith</b> 
                 </a>
               </p>
-              <!-- <p class="lead">(404) 441-02xx</p> -->
+              <p class="lead">(xxx) xxx-xxxx</p>
             </div>
           </div>
         </div>
