--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap"
       rel="stylesheet"
     />
+ 
   </head>
   <body
     data-bs-spy="scroll"
@@ -20,7 +21,7 @@
     data-bs-offset="100"
     tabindex="0"
   >
-    <nav class="navbar navbar-expand-lg bgdark1 fixed-top shadow-sm">
+    <nav class="navbar navbar-expand-lg bgdark1 fixed-top navbar-dark shadow-sm">
       <div class="container">
         <a class="navbar-brand fw-bold d-flex align-items-center" href="#">
           <!-- <img
@@ -31,7 +32,7 @@
           /> -->
         </a>
         <button
-          class="navbar-toggler"
+          class="navbar-toggler text-white"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarNav"
@@ -39,7 +40,8 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon"></span>
+       
+          <span class="navbar-toggler-icon text-white"></span>
         </button>
         <div
           class="collapse navbar-collapse justify-content-center fw-bold"
@@ -47,17 +49,17 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="fs-6 nav-link textg underline-hover" href="#home"
+              <a class="fs-6 nav-link textg bgdark1 underline-hover" href="#home"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="fs-6 nav-link textg underline-hover" href="#problem"
+              <a class="fs-6 nav-link textg bgdark1 underline-hover" href="#problem"
                 >Who We Are</a
               >
             </li>
             <li class="nav-item">
-              <a class="fs-6 nav-link textg underline-hover" href="#solution"
+              <a class="fs-6 nav-link textg bgdark1 underline-hover" href="#solution"
                 >Our Services</a
               >
             </li>
@@ -74,7 +76,7 @@
             </li> -->
         
             <li class="nav-item">
-              <a class="fs-6 nav-link textg underline-hover" href="#contact"
+              <a class="fs-6 nav-link textg bgdark1 underline-hover" href="#contact"
                 >Contact</a
               >
             </li>
