--- a/index.html
+++ b/index.html
@@ -132,8 +132,15 @@
           class="fs-4 textg mt-4 lead ps-3 border-start border-3 border-secondary border-highlight"
         >
           Whether you’re a business seeking growth, an investor exploring new sectors, or a company looking to enter new markets, Atlantus Partners provides the insight, network, and execution support to make it happen.
-        </p>
-
+        </p><hr>
+  <div class="brand-logos text-center justify-content-center">
+          <img
+            src="images/stock.jpg"
+            alt="Brand Logos"
+            class="img-fluid"
+            style="border-radius: 320px; max-width: 40%; height: auto; margin-top: 60px"
+          />
+        </div>
        
       </div>
 
