--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
           <img
             src="images/stock.jpg"
             alt="Brand Logos"
-            class="img-fluid"
-            style="border-radius: 320px; max-width: 40%; height: auto; margin-top: 60px"
+            class="img-fluid image-fade"
+            style="max-width: 40%; height: auto; margin-top: 60px"
           />
         </div>
        
