--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         >
           Whether you’re a business seeking growth, an investor exploring new sectors, or a company looking to enter new markets, Atlantus Partners provides the insight, network, and execution support to make it happen.
         </p><hr>
-  <div class="brand-logos text-center justify-content-center">
+  <div class="text-center justify-content-center">
           <img
             src="images/stock.jpg"
             alt="Brand Logos"
