--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="row justify-content-center">
       <div class="col-10 col-md-6">
         <img
-          src="images/blackatl.png"
+          src="images/atltransblue.png"
           alt="Atlantus Partners"
           class="img-fluid mb-4"
           style="margin-top: 20px;"
