--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
         <div class="card text-center">
           <div class="card-body p-4">
             <img
-              src="images/Atlantuswhite.png"
+              src="images/atltransblue.png"
               alt="AtlantusLogo"
               class="mb-3 img-fluid"
               style="max-height: 200px;"
