--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <img
           src="images/atltransblue.png"
           alt="Atlantus Partners"
-          class="img-fluid mb-4"
+          class="img-fluid mb-4 glow-image"
           style="margin-top: 20px;"
         />
       </div>
@@ -124,7 +124,7 @@
         <p
           class="fs-4 textg mt-4 lead ps-3 border-start border-3 border-secondary border-highlight"
         >
-          <b>Atlantus Partners</b> is a strategic consulting firm based in Atlanta, Georgia, dedicated to bridging the gap between opportunity and action. We specialize in relationship facilitation across a wide range of industries — from energy and infrastructure to finance, manufacturing, and emerging technologies.
+          <span class=" text-white">Atlantus Partners</span> is a strategic consulting firm based in Atlanta, Georgia, dedicated to bridging the gap between opportunity and action. We specialize in relationship facilitation across a wide range of industries — from energy and infrastructure to finance, manufacturing, and emerging technologies.
         </p>
 
         <p
