--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
               <a class="nav-link text-white underline-hover" href="#brands"
                 >Brands</a
               >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white underline-hover" href="#team"
-                >Team</a
-              >
             </li> -->
+            <li class="nav-item">
+              <a class="fs-6 nav-link textg underline-hover" href="#team"
+                >Markets</a
+              >
+            </li> 
         
             <li class="nav-item">
               <a class="fs-6 nav-link textg bgdark1 underline-hover" href="#contact"
@@ -217,69 +217,62 @@
       </div>
     </section> -->
 
-    <!-- Team Section -->
-    <!-- <section id="team" class="bg-white text-center py-5">
-      <div class="container">
-        <h1 class="mb-4 text-dark fw-bold">Meet the Team</h1>
-        <div class="row g-4">
-          <div class="col-sm-6 col-md-4">
-            <div class="team-member bg-light">
-              <h5>Robert</h5>
-              <p class="text-secondary">Founder</p>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4">
-            <div class="team-member bg-light">
-              <h5>Debra</h5>
-              <p class="text-secondary">Business Development</p>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4">
-            <div class="team-member bg-light">
-              <h5>Ashley</h5>
-              <p class="text-secondary">Marketing</p>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4">
-            <div class="team-member bg-light">
-              <h5>Steve</h5>
-              <p class="text-secondary"> Biz Dev</p>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4">
-            <div class="team-member bg-light">
-              <h5>Ray</h5>
-              <p class="text-secondary">Sr Marketing Manager</p>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4">
-            <div class="team-member bg-light">
-              <h5>Trey</h5>
-              <p class="text-secondary">Vendor Procurement</p>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4">
-            <div class="team-member bg-light">
-              <h5>Steve</h5>
-              <p class="text-secondary">Advisor, Investor</p>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4">
-            <div class="team-member bg-light">
-              <h5>Don </h5>
-              <p class="text-secondary">Advisor/p>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4">
-            <div class="team-member bg-light">
-              <h5>Eric </h5>
-              <p class="text-secondary">Advisor, Investor</p>
-            </div>
+    <!-- Market Section -->
+<section id="team" class="bgdark1 text-center py-5">
+  <div class="container">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
+
+      <div class="col d-flex">
+        <div class="card flex-fill bgdark2" style="min-height: 200px;">
+          <div class="card-body d-flex align-items-center justify-content-center">
+            <h5 class="card-title mb-0 orb">Oil & Gas</h5>
           </div>
         </div>
       </div>
-    </section> -->
 
+      <div class="col d-flex">
+        <div class="card flex-fill bgdark2" style="min-height: 200px;">
+          <div class="card-body d-flex align-items-center justify-content-center">
+            <h5 class="card-title mb-0 orb">Agricultural Technology (AgTech)</h5>
+          </div>
+        </div>
+      </div>
+
+      <div class="col d-flex">
+        <div class="card flex-fill bgdark2" style="min-height: 200px;">
+          <div class="card-body d-flex align-items-center justify-content-center">
+            <h5 class="card-title mb-0 orb">Environmental Technology (Cleantech/Greentech)</h5>
+          </div>
+        </div>
+      </div>
+
+      <div class="col d-flex">
+        <div class="card flex-fill bgdark2" style="min-height: 200px;">
+          <div class="card-body d-flex align-items-center justify-content-center">
+            <h5 class="card-title mb-0 orb">Biotechnology</h5>
+          </div>
+        </div>
+      </div>
+
+      <div class="col d-flex">
+        <div class="card flex-fill bgdark2" style="min-height: 200px;">
+          <div class="card-body d-flex align-items-center justify-content-center">
+            <h5 class="card-title mb-0 orb">Infrastructure & Urban Development</h5>
+          </div>
+        </div>
+      </div>
+
+      <div class="col d-flex">
+        <div class="card flex-fill bgdark2" style="min-height: 200px;">
+          <div class="card-body d-flex align-items-center justify-content-center">
+            <h5 class="card-title mb-0 orb">Hospitality Real Estate</h5>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
  
 
     <!-- Contact Section -->
