--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
       <div class="col d-flex">
         <div class="card flex-fill bgdark2" style="min-height: 200px;">
           <div class="card-body d-flex align-items-center justify-content-center">
-            <h5 class="card-title mb-0 orb">Oil & Gas</h5>
+            <h5 class="card-title mb-0 orb fs-4">Oil & Gas</h5>
           </div>
         </div>
       </div>
@@ -233,7 +233,7 @@
       <div class="col d-flex">
         <div class="card flex-fill bgdark2" style="min-height: 200px;">
           <div class="card-body d-flex align-items-center justify-content-center">
-            <h5 class="card-title mb-0 orb">Agricultural Technology (AgTech)</h5>
+            <h5 class="card-title mb-0 orb fs-4">Agricultural Technology (AgTech)</h5>
           </div>
         </div>
       </div>
@@ -241,7 +241,7 @@
       <div class="col d-flex">
         <div class="card flex-fill bgdark2" style="min-height: 200px;">
           <div class="card-body d-flex align-items-center justify-content-center">
-            <h5 class="card-title mb-0 orb">Environmental Technology (Cleantech/Greentech)</h5>
+            <h5 class="card-title mb-0 orb fs-4">Environmental Technology (Cleantech/Greentech)</h5>
           </div>
         </div>
       </div>
@@ -249,7 +249,7 @@
       <div class="col d-flex">
         <div class="card flex-fill bgdark2" style="min-height: 200px;">
           <div class="card-body d-flex align-items-center justify-content-center">
-            <h5 class="card-title mb-0 orb">Biotechnology</h5>
+            <h5 class="card-title mb-0 orb fs-4">Biotechnology</h5>
           </div>
         </div>
       </div>
@@ -257,7 +257,7 @@
       <div class="col d-flex">
         <div class="card flex-fill bgdark2" style="min-height: 200px;">
           <div class="card-body d-flex align-items-center justify-content-center">
-            <h5 class="card-title mb-0 orb">Infrastructure & Urban Development</h5>
+            <h5 class="card-title mb-0 orb fs-4">Infrastructure & Urban Development</h5>
           </div>
         </div>
       </div>
@@ -265,7 +265,7 @@
       <div class="col d-flex">
         <div class="card flex-fill bgdark2" style="min-height: 200px;">
           <div class="card-body d-flex align-items-center justify-content-center">
-            <h5 class="card-title mb-0 orb">Hospitality Real Estate</h5>
+            <h5 class="card-title mb-0 orb fs-4">Hospitality Real Estate</h5>
           </div>
         </div>
       </div>
