--- a/index.html
+++ b/index.html
@@ -223,49 +223,49 @@
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
 
       <div class="col d-flex">
-        <div class="card flex-fill bgdark2" style="min-height: 200px;">
+        <div class="card flex-fill bgdark2 team-member" style="min-height: 200px;">
           <div class="card-body d-flex align-items-center justify-content-center">
-            <h5 class="card-title mb-0 orb fs-4">Oil & Gas</h5>
+            <h5 class="card-title text-light mb-0 orb fs-4">Oil & Gas</h5>
           </div>
         </div>
       </div>
 
       <div class="col d-flex">
-        <div class="card flex-fill bgdark2" style="min-height: 200px;">
+        <div class="card flex-fill bgdark2 team-member" style="min-height: 200px;">
           <div class="card-body d-flex align-items-center justify-content-center">
-            <h5 class="card-title mb-0 orb fs-4">Agricultural Technology (AgTech)</h5>
+            <h5 class="card-title text-light mb-0 orb fs-4">Agricultural Technology (AgTech)</h5>
           </div>
         </div>
       </div>
 
       <div class="col d-flex">
-        <div class="card flex-fill bgdark2" style="min-height: 200px;">
+        <div class="card flex-fill bgdark2 team-member" style="min-height: 200px;">
           <div class="card-body d-flex align-items-center justify-content-center">
-            <h5 class="card-title mb-0 orb fs-4">Environmental Technology (Cleantech/Greentech)</h5>
+            <h5 class="card-title text-light mb-0 orb fs-4">Environmental Technology (Cleantech/Greentech)</h5>
           </div>
         </div>
       </div>
 
       <div class="col d-flex">
-        <div class="card flex-fill bgdark2" style="min-height: 200px;">
+        <div class="card flex-fill bgdark2 team-member" style="min-height: 200px;">
           <div class="card-body d-flex align-items-center justify-content-center">
-            <h5 class="card-title mb-0 orb fs-4">Biotechnology</h5>
+            <h5 class="card-title text-light mb-0 orb fs-4">Bio-Technology</h5>
           </div>
         </div>
       </div>
 
       <div class="col d-flex">
-        <div class="card flex-fill bgdark2" style="min-height: 200px;">
+        <div class="card flex-fill bgdark2 team-member" style="min-height: 200px;">
           <div class="card-body d-flex align-items-center justify-content-center">
-            <h5 class="card-title mb-0 orb fs-4">Infrastructure & Urban Development</h5>
+            <h5 class="card-title text-light mb-0 orb fs-4">Infrastructure & Urban Development</h5>
           </div>
         </div>
       </div>
 
       <div class="col d-flex">
-        <div class="card flex-fill bgdark2" style="min-height: 200px;">
+        <div class="card flex-fill bgdark2 team-member" style="min-height: 200px;">
           <div class="card-body d-flex align-items-center justify-content-center">
-            <h5 class="card-title mb-0 orb fs-4">Hospitality Real Estate</h5>
+            <h5 class="card-title text-light mb-0 orb fs-4">Hospitality Real Estate</h5>
           </div>
         </div>
       </div>
