--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
 
       <div class="col d-flex">
-        <div class="card flex-fill bgdark2 team-member" style="min-height: 200px;">
+        <div class="card flex-fill bgdark2 team-member border-2 border-dark" style="min-height: 200px;">
           <div class="card-body d-flex align-items-center justify-content-center">
             <h5 class="card-title text-light mb-0 orb fs-4">Oil & Gas</h5>
           </div>
@@ -231,7 +231,7 @@
       </div>
 
       <div class="col d-flex">
-        <div class="card flex-fill bgdark2 team-member" style="min-height: 200px;">
+        <div class="card flex-fill bgdark2 team-member border-2 border-dark" style="min-height: 200px;">
           <div class="card-body d-flex align-items-center justify-content-center">
             <h5 class="card-title text-light mb-0 orb fs-4">Agricultural Technology (AgTech)</h5>
           </div>
@@ -239,7 +239,7 @@
       </div>
 
       <div class="col d-flex">
-        <div class="card flex-fill bgdark2 team-member" style="min-height: 200px;">
+        <div class="card flex-fill bgdark2 team-member border-2 border-dark" style="min-height: 200px;">
           <div class="card-body d-flex align-items-center justify-content-center">
             <h5 class="card-title text-light mb-0 orb fs-4">Environmental Technology (Cleantech/Greentech)</h5>
           </div>
@@ -247,7 +247,7 @@
       </div>
 
       <div class="col d-flex">
-        <div class="card flex-fill bgdark2 team-member" style="min-height: 200px;">
+        <div class="card flex-fill bgdark2 team-member border-2 border-dark" style="min-height: 200px;">
           <div class="card-body d-flex align-items-center justify-content-center">
             <h5 class="card-title text-light mb-0 orb fs-4">Bio-Technology</h5>
           </div>
@@ -255,7 +255,7 @@
       </div>
 
       <div class="col d-flex">
-        <div class="card flex-fill bgdark2 team-member" style="min-height: 200px;">
+        <div class="card flex-fill bgdark2 team-member border-2 border-dark" style="min-height: 200px;">
           <div class="card-body d-flex align-items-center justify-content-center">
             <h5 class="card-title text-light mb-0 orb fs-4">Infrastructure & Urban Development</h5>
           </div>
@@ -263,7 +263,7 @@
       </div>
 
       <div class="col d-flex">
-        <div class="card flex-fill bgdark2 team-member" style="min-height: 200px;">
+        <div class="card flex-fill bgdark2 team-member border border-2 border-dark" style="min-height: 200px;">
           <div class="card-body d-flex align-items-center justify-content-center">
             <h5 class="card-title text-light mb-0 orb fs-4">Hospitality Real Estate</h5>
           </div>
