--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
   >
     <nav class="navbar navbar-expand-lg bgdark1 fixed-top navbar-dark shadow-sm">
       <div class="container">
-        <a class="navbar-brand fw-bold d-flex align-items-center" href="#">
-          <!-- <img
-            src="images/truewhite.png" 
+        <a class="navbar-brand fw-bold d-flex align-items-end" href="#">
+          <img
+            src="images/atltranssilver.png" 
             alt="Atlantus Logo"
             height="45"
             class="me-2"
-          /> -->
+          />
         </a>
         <button
           class="navbar-toggler text-white"
@@ -44,7 +44,7 @@
           <span class="navbar-toggler-icon text-white"></span>
         </button>
         <div
-          class="collapse navbar-collapse justify-content-center fw-bold"
+          class="collapse navbar-collapse justify-content-end fw-bold"
           id="navbarNav"
         >
           <ul class="navbar-nav">
