--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap"
       rel="stylesheet"
     />
- 
+  
+ <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.0/css/all.min.css"
+/>
   </head>
   <body
     data-bs-spy="scroll"
@@ -292,6 +296,9 @@
               <strong>Jameson Smith</strong>
             </p>
             <p class="lead">(xxx) xxx-xxxx</p>
+            <a href="https://www.linkedin.com/in/yourusername" target="_blank" rel="noopener noreferrer">
+  <i class="fab fa-linkedin" style="font-size:34px; color:#0A66C2;"></i>
+</a>
           </div>
         </div>
       </div>
