--- a/index.html
+++ b/index.html
@@ -285,21 +285,29 @@
     <div class="row justify-content-center">
       <div class="col-12 col-md-6 col-lg-4">
         <div class="card text-center">
-          <div class="card-body p-4">
-            <img
-              src="images/atltransblue.png"
-              alt="AtlantusLogo"
-              class="mb-3 img-fluid"
-              style="max-height: 200px;"
-            />
-            <p class="lead mb-1">
-              <strong>Jameson Smith</strong>
-            </p>
-            <p class="lead">(xxx) xxx-xxxx</p>
-            <a href="https://www.linkedin.com/in/yourusername" target="_blank" rel="noopener noreferrer">
-  <i class="fab fa-linkedin" style="font-size:34px; color:#0A66C2;"></i>
+        <div class="card-body p-4 text-center">
+  <img
+    src="images/atltransblue.png"
+    alt="AtlantusLogo"
+    class="mb-3 img-fluid"
+    style="max-height: 200px;"
+  />
+  <p class="lead mb-1"><strong>Jameson Smith</strong></p>
+  <p class="lead">(xxx) xxx-xxxx</p>
+
+  <!-- Social Icons Container -->
+  <div style="display: flex; justify-content: center; gap: 16px; margin-top: 10px;">
+    <a href="mailto:you@example.com">
+  <i class="fas fa-envelope" style="font-size:34px; color:#000;"></i>
 </a>
-          </div>
+    <a href="https://www.linkedin.com/in/yourusername" target="_blank" rel="noopener noreferrer">
+      <i class="fab fa-linkedin" style="font-size:34px; color:#000;"></i>
+    </a>
+    <a href="https://x.com/yourusername" target="_blank" rel="noopener noreferrer">
+      <i class="fab fa-x-twitter" style="font-size:34px; color:#000;"></i>
+    </a>
+  </div>
+</div>
         </div>
       </div>
     </div>
