--- a/index.html
+++ b/index.html
@@ -294,19 +294,20 @@
   />
   <p class="lead mb-1"><strong>Jameson Smith</strong></p>
   <p class="lead">(xxx) xxx-xxxx</p>
-
+<hr>
   <!-- Social Icons Container -->
-  <div style="display: flex; justify-content: center; gap: 16px; margin-top: 10px;">
-    <a href="mailto:you@example.com">
-  <i class="fas fa-envelope" style="font-size:34px; color:#000;"></i>
-</a>
-    <a href="https://www.linkedin.com/in/yourusername" target="_blank" rel="noopener noreferrer">
-      <i class="fab fa-linkedin" style="font-size:34px; color:#000;"></i>
-    </a>
-    <a href="https://x.com/yourusername" target="_blank" rel="noopener noreferrer">
-      <i class="fab fa-x-twitter" style="font-size:34px; color:#000;"></i>
-    </a>
-  </div>
+ <div style="display: flex; justify-content: center; gap: 16px; margin-top: 10px;">
+  <a href="mailto:you@example.com" class="btn btn-white rounded-square border  shadow-lg" style="width: 50px; height: 50px; display: flex; align-items: center; justify-content: center;">
+    <i class="fas fa-envelope" style="font-size:30px; "></i>
+  </a>
+  <a href="https://www.linkedin.com/in/yourusername" target="_blank" rel="noopener noreferrer" class="btn btn-white rounded-square border shadow-lg" style="width: 50px; height: 50px; display: flex; align-items: center; justify-content: center;">
+    <i class="fab fa-linkedin" style="font-size:30px; color:#079af6;"></i>
+  </a>
+  <a href="https://x.com/yourusername" target="_blank" rel="noopener noreferrer" class="btn btn-white rounded-square border shadow-lg" style="width: 50px; height: 50px; display: flex; align-items: center; justify-content: center;">
+    <i class="fab fa-x-twitter" style="font-size:30px; color:#000;"></i>
+  </a>
+</div>
+  <hr>
 </div>
         </div>
       </div>
