--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
        
       </div>
 
-      <!-- Solution Section -->
+      <!-- Services Section -->
     </section>
     <section id="solution" class="bgdark1">
       <div class="container">
-       
+         <!-- <h1 class="fw-bold mb-4 text-white">Our Services</h1> -->
         <h3 class="text-white fw-bold mb-4 mt-4">Strategic Relationship Facilitation</h3>
         <p
           class="ms-3 textg lead mt-4 ps-3 border-start border-3 border-secondary border-highlight"
@@ -222,9 +222,11 @@
     </section> -->
 
     <!-- Market Section -->
-<section id="team" class="bgdark1 text-center py-5">
+<section id="team" class="bgdark1  py-5">
+  
   <div class="container">
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
+      <!-- <h1 class="fw-bold mb-4 text-white">Markets &mdash;</h1> -->
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4 text-center">
 
       <div class="col d-flex">
         <div class="card flex-fill bgdark2 team-member border-2 border-dark" style="min-height: 200px;">
@@ -282,6 +284,7 @@
     <!-- Contact Section -->
    <section id="contact" class="bgdark1 py-5">
   <div class="container">
+      <!-- <h1 class="fw-bold mb-4 text-white">Contact &mdash;</h1> -->
     <div class="row justify-content-center">
       <div class="col-12 col-md-6 col-lg-4">
         <div class="card text-center">
@@ -317,33 +320,8 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="app.js"></script>
 
-    <!-- Custom JS for active navigation highlighting -->
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        // Activate the navigation links based on scroll position
-        const sections = document.querySelectorAll("section");
-        const navLinks = document.querySelectorAll(".nav-link");
-
-        window.addEventListener("scroll", function () {
-          let current = "";
-
-          sections.forEach((section) => {
-            const sectionTop = section.offsetTop;
-            const sectionHeight = section.clientHeight;
-            if (pageYOffset >= sectionTop - 150) {
-              current = section.getAttribute("id");
-            }
-          });
-
-          navLinks.forEach((link) => {
-            link.classList.remove("active");
-            if (link.getAttribute("href").substring(1) === current) {
-              link.classList.add("active");
-            }
-          });
-        });
-      });
-    </script>
+  
   </body>
 </html>
