--- a/index.html
+++ b/index.html
@@ -53,17 +53,17 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="fs-6 nav-link textg bgdark1 underline-hover" href="#home"
+              <a class="fs-6 nav-link textg underline-hover" href="#home"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="fs-6 nav-link textg bgdark1 underline-hover" href="#problem"
+              <a class="fs-6 nav-link textg underline-hover" href="#problem"
                 >Who We Are</a
               >
             </li>
             <li class="nav-item">
-              <a class="fs-6 nav-link textg bgdark1 underline-hover" href="#solution"
+              <a class="fs-6 nav-link textg underline-hover" href="#solution"
                 >Our Services</a
               >
             </li>
@@ -80,7 +80,7 @@
             </li> 
         
             <li class="nav-item">
-              <a class="fs-6 nav-link textg bgdark1 underline-hover" href="#contact"
+              <a class="fs-6 nav-link textg underline-hover" href="#contact"
                 >Contact</a
               >
             </li>
