--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
       <textarea name="message" class="form-control bg-light" id="message" rows="5" required></textarea>
     </div>
     
-    <button type="submit" class="btn btn- w-100">Send</button>
+    <button type="submit" class="btn btn-dark w-100">Send</button>
   </form>
 <hr>
   <!-- Social Icons Container -->
