--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       z-index: 10;
     "
   >
-    - Strategic - Advisors -
+    - Strategic Advisors -
   </h2>
 </div>
 </section>
@@ -124,7 +124,7 @@
     
     <section id="problem" class="bgdark1">
       <div class="container">
-        <!-- <h1 class="fw-bold mb-4 text-white">Who We Are</h1> -->
+        <h1 class="fw-bold mb-4 text-light d-block d-md-none">Who We Are &mdash;</h1>
         <p
           class="fs-4 textg mt-4 lead ps-3 border-start border-3 border-secondary border-highlight"
         >
@@ -156,7 +156,7 @@
     </section>
     <section id="solution" class="bgdark1">
       <div class="container">
-         <!-- <h1 class="fw-bold mb-4 text-white">Our Services</h1> -->
+         <h1 class="fw-bold mb-4 text-light d-block d-md-none">Our Services &mdash;</h1>
         <h3 class="text-white fw-bold mb-4 mt-4">Strategic Relationship Facilitation</h3>
         <p
           class="ms-3 textg lead mt-4 ps-3 border-start border-3 border-secondary border-highlight"
@@ -225,7 +225,7 @@
 <section id="team" class="bgdark1  py-5">
   
   <div class="container">
-      <!-- <h1 class="fw-bold mb-4 text-white">Markets &mdash;</h1> -->
+      <h1 class="fw-bold mb-4 text-light d-block d-md-none">Markets &mdash;</h1>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4 text-center">
 
       <div class="col d-flex">
@@ -284,7 +284,7 @@
     <!-- Contact Section -->
    <section id="contact" class="bgdark1 py-5">
   <div class="container">
-      <!-- <h1 class="fw-bold mb-4 text-white">Contact &mdash;</h1> -->
+      <!-- <h1 class="fw-bold mb-4 text-light d-block d-md-none">Contact &mdash;</h1> -->
     <div class="row justify-content-center">
       <div class="col-12 col-md-6 col-lg-4">
         <div class="card text-center">
