--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
     "
   >
     - Strategic Advisors -
-  </h2>
+  </h2><hr>
+  <!-- <p class="textg" style="font-size: 0.8rem; color: #55727f; position: relative; z-index: 10;">Our work is grounded in trusted relationships that drive clarity, direction, and long-term value.</p> -->
+<p class="textg" style="font-size: 0.8rem; color: #55727f; position: relative; z-index: 10;">© 2025 Atlantus Partners LLC. All rights reserved. Registered in Georgia, USA</p>
 </div>
 </section>
       
