--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       <div class="col d-flex">
         <div class="card flex-fill bgdark2 team-member border-2 border-dark" style="min-height: 200px;">
           <div class="card-body d-flex align-items-center justify-content-center">
-            <h5 class="card-title text-light mb-0 orb fs-4">Oil & Gas</h5>
+            <h5 class="card-title text-light mb-0 orb fs-5">Oil & Gas</h5>
           </div>
         </div>
       </div>
@@ -241,7 +241,7 @@
       <div class="col d-flex">
         <div class="card flex-fill bgdark2 team-member border-2 border-dark" style="min-height: 200px;">
           <div class="card-body d-flex align-items-center justify-content-center">
-            <h5 class="card-title text-light mb-0 orb fs-4">Agricultural Technology (AgTech)</h5>
+            <h5 class="card-title text-light mb-0 orb fs-5">Agricultural Technology (AgTech)</h5>
           </div>
         </div>
       </div>
@@ -249,7 +249,7 @@
       <div class="col d-flex">
         <div class="card flex-fill bgdark2 team-member border-2 border-dark" style="min-height: 200px;">
           <div class="card-body d-flex align-items-center justify-content-center">
-            <h5 class="card-title text-light mb-0 orb fs-4">Environmental Technology (Cleantech/Greentech)</h5>
+            <h5 class="card-title text-light mb-0 orb fs-5">Environmental Technology (Cleantech/Greentech)</h5>
           </div>
         </div>
       </div>
@@ -257,7 +257,7 @@
       <div class="col d-flex">
         <div class="card flex-fill bgdark2 team-member border-2 border-dark" style="min-height: 200px;">
           <div class="card-body d-flex align-items-center justify-content-center">
-            <h5 class="card-title text-light mb-0 orb fs-4">Bio-Technology</h5>
+            <h5 class="card-title text-light mb-0 orb fs-5">Bio-Technology (PFAS Degradation)</h5>
           </div>
         </div>
       </div>
@@ -265,7 +265,7 @@
       <div class="col d-flex">
         <div class="card flex-fill bgdark2 team-member border-2 border-dark" style="min-height: 200px;">
           <div class="card-body d-flex align-items-center justify-content-center">
-            <h5 class="card-title text-light mb-0 orb fs-4">Infrastructure & Urban Development</h5>
+            <h5 class="card-title text-light mb-0 orb fs-5">Infrastructure & Urban Development</h5>
           </div>
         </div>
       </div>
@@ -273,7 +273,7 @@
       <div class="col d-flex">
         <div class="card flex-fill bgdark2 team-member border border-2 border-dark" style="min-height: 200px;">
           <div class="card-body d-flex align-items-center justify-content-center">
-            <h5 class="card-title text-light mb-0 orb fs-4">Hospitality Real Estate</h5>
+            <h5 class="card-title text-light mb-0 orb fs-5">Hospitality Real Estate</h5>
           </div>
         </div>
       </div>
