--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                 >
                   <a
                     href="mailto:you@example.com"
-                    class="btn btn-white rounded-square border shadow-lg"
+                    class="btn btn-white bg-white rounded-square border shadow-lg"
                     style="
                       width: 50px;
                       height: 50px;
@@ -450,7 +450,7 @@
                     href="https://www.linkedin.com/in/yourusername"
                     target="_blank"
                     rel="noopener noreferrer"
-                    class="btn btn-white rounded-square border shadow-lg"
+                    class="btn btn-white bg-white rounded-square border shadow-lg"
                     style="
                       width: 50px;
                       height: 50px;
@@ -468,7 +468,7 @@
                     href="https://x.com/yourusername"
                     target="_blank"
                     rel="noopener noreferrer"
-                    class="btn btn-white rounded-square border shadow-lg"
+                    class="btn btn-white bg-white rounded-square border shadow-lg"
                     style="
                       width: 50px;
                       height: 50px;
