--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <!-- Home Section -->
     <section
       id="home"
-      class="bgdark1 text-white text-center d-flex flex-column justify-content-between min-vh-100"
+      class="bgdark1 text-center d-flex flex-column justify-content-between min-vh-100"
     >
       <div
         class="container mt-4 flex-grow-1 d-flex flex-column justify-content-center"
@@ -364,7 +364,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="bgdark1 py-5">
+    <section id="contact" class="bgdark1 py-5 py-sm-4 py-3">
       <div class="container">
         <!-- <h1 class="fw-bold mb-4 text-light d-block d-md-none">Contact &mdash;</h1> -->
         <div class="row justify-content-center">
