--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                     <i class="fas fa-envelope" style="font-size: 30px"></i>
                   </a>
                   <a
-                    href="https://www.linkedin.com/in/yourusername"
+                    href="https://www.linkedin.com/in/percy-helmer-68194a129/"
                     target="_blank"
                     rel="noopener noreferrer"
                     class="btn btn-white bg-white rounded-square border shadow-lg"
