--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Atlantus Group</title>
+    <title>Atlantus Partners</title>
+    <meta
+      name="description"
+      content="The official website of Atlantus Partners."
+    />
+    <meta name="keywords" content="Atlantus Partners" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://www.atlantuspartners.com/" />
     <link rel="stylesheet" href="styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -379,8 +386,11 @@
                 />
                 <!-- <p class="lead mb-1"><strong>Jameson Smith</strong></p>
   <p class="lead">(xxx) xxx-xxxx</p> -->
-                <form action="https://formsubmit.co/e43bce5edf5d10fd72d8be27c06df5b3" method="POST">
-                   <input type="hidden" name="form_name" value="Atlantus" />
+                <form
+                  action="https://formsubmit.co/e43bce5edf5d10fd72d8be27c06df5b3"
+                  method="POST"
+                >
+                  <input type="hidden" name="form_name" value="Atlantus" />
                   <div class="mb-3">
                     <label for="name" class="form-label orb text-start d-block"
                       >Name</label
