--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             src="images/atltranssilver.png"
             alt="Atlantus Logo"
             height="40"
-            class="me-2"
+            class="me-2 logo-animated"
           />
         </a>
         <button
