--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <!-- Footer -->
     <footer class="mt-3">
      
-      <hr class="mx-auto my-1" style="width: 50px; border-color: #55727f;" />
+      <hr class="mx-auto my-1" style="width: 50px; border-color: #e5f6ff;" />
       <p class="textg m-0" style="font-size: 0.8rem; color: #55727f;">
         © 2025 Atlantus Partners LLC. All rights reserved. Registered in Georgia, USA
       </p>
