--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                   "
                 >
                   <a
-                    href="mailto:you@example.com"
+                    href="mailto:thelmer@atlantuspartners.com"
                     class="btn btn-white bg-white rounded-square border shadow-lg"
                     style="
                       width: 50px;
