--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 
                   <div class="mb-3">
                     <label for="email" class="form-label orb text-start d-block"
-                      >Email address</label
+                      >Email Address</label
                     >
                     <input
                       type="email"
