--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     />
     <meta name="keywords" content="Atlantus Partners" />
     <meta name="robots" content="index, follow" />
+    <link rel="icon" href="images/atltranssilver.png" type="image/png">
     <link rel="canonical" href="https://www.atlantuspartners.com/" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
