--- a/index.html
+++ b/index.html
@@ -461,9 +461,9 @@
 
                   <button type="submit" class="btn btn-dark w-100">Send</button>
                 </form>
-                <hr />
+                <!-- <hr /> -->
                 <!-- Social Icons Container -->
-                <div
+                <!-- <div
                   style="
                     display: flex;
                     justify-content: center;
@@ -502,7 +502,7 @@
                       style="font-size: 30px; color: #079af6"
                     ></i>
                   </a>
-                  <!-- <a
+                  <a
                     href="https://x.com/yourusername"
                     target="_blank"
                     rel="noopener noreferrer"
@@ -519,7 +519,7 @@
                       class="fab fa-x-twitter"
                       style="font-size: 30px; color: #000"
                     ></i>
-                  </a> -->
+                  </a>
                   <span
                     class="btn btn-white bg-white rounded-square border shadow-lg"
                     style="
@@ -535,7 +535,7 @@
                       style="font-size: 30px; color: #000"
                     ></i>
                   </span>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
