--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                   "
                 >
                   <a
-                    href="mailto:thelmer@atlantuspartners.com"
+                    href="mailto:@atlantuspartners.com"
                     class="btn btn-white bg-white rounded-square border shadow-lg"
                     style="
                       width: 50px;
@@ -485,7 +485,7 @@
                     <i class="fas fa-envelope" style="font-size: 30px"></i>
                   </a>
                   <a
-                    href="https://www.linkedin.com/in/percy-helmer-68194a129/"
+                    href="https://www.linkedin.com/in/yourusername/"
                     target="_blank"
                     rel="noopener noreferrer"
                     class="btn btn-white bg-white rounded-square border shadow-lg"
