--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <meta name="keywords" content="Atlantus Partners" />
     <meta name="robots" content="index, follow" />
-    <link rel="icon" href="images/atltranssilver.png" type="image/png">
+    <link rel="icon" href="images/atltranssilver.png" type="image/png" />
     <link rel="canonical" href="https://www.atlantuspartners.com/" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -461,9 +461,9 @@
 
                   <button type="submit" class="btn btn-dark w-100">Send</button>
                 </form>
-                <!-- <hr /> -->
+                <hr />
                 <!-- Social Icons Container -->
-                <!-- <div
+                <div
                   style="
                     display: flex;
                     justify-content: center;
@@ -472,7 +472,8 @@
                   "
                 >
                   <a
-                    href="mailto:@atlantuspartners.com"
+                    href="#"
+                    id="email-button"
                     class="btn btn-white bg-white rounded-square border shadow-lg"
                     style="
                       width: 50px;
@@ -485,7 +486,7 @@
                     <i class="fas fa-envelope" style="font-size: 30px"></i>
                   </a>
                   <a
-                    href="https://www.linkedin.com/in/yourusername/"
+                    href="https://www.linkedin.com/in/percy-helmer-68194a129/"
                     target="_blank"
                     rel="noopener noreferrer"
                     class="btn btn-white bg-white rounded-square border shadow-lg"
@@ -502,7 +503,7 @@
                       style="font-size: 30px; color: #079af6"
                     ></i>
                   </a>
-                  <a
+                  <!-- <a
                     href="https://x.com/yourusername"
                     target="_blank"
                     rel="noopener noreferrer"
@@ -519,7 +520,7 @@
                       class="fab fa-x-twitter"
                       style="font-size: 30px; color: #000"
                     ></i>
-                  </a>
+                  </a> -->
                   <span
                     class="btn btn-white bg-white rounded-square border shadow-lg"
                     style="
@@ -535,7 +536,7 @@
                       style="font-size: 30px; color: #000"
                     ></i>
                   </span>
-                </div> -->
+                </div>
               </div>
             </div>
           </div>
