--- a/index.html
+++ b/index.html
@@ -260,12 +260,12 @@
       <div class="container">
         <h1 class="fw-bold pb-3">Brands & Aggregation Partners</h1>
         <p class="lead">
-          Popular retail brands and aggregators offer exclusive deals, so your
-          fans and alumni can support your athletes while saving money.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus efficitur, sapien at blandit hendrerit, libero nulla interdum nibh, non sagittis libero nulla nec justo. Suspendisse potenti. Sed euismod leo at dui dignissim, nec laoreet velit tempus.
+</p>
         </p>
         <p class="lead">
-          Each purchase brings real dollars back to your school or collective -
-          turning everyday shopping into year-round support.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus efficitur, sapien at blandit hendrerit, libero nulla interdum nibh, non sagittis libero nulla nec justo. Suspendisse potenti. Sed euismod leo at dui dignissim, nec laoreet velit tempus.
+</p>
         </p>
 
         <p class="fw-bold">&mdash; Brands Like &mdash;</p>
@@ -541,6 +541,13 @@
             </div>
           </div>
         </div>
+         <footer class="text-center mt-3">
+          <hr class="mx-auto my-1" style="width: 50px; border-color: #e5f6ff" />
+          <p class="textg m-0" style="font-size: 0.8rem; color: #55727f">
+            © 2025 Atlantus Partners LLC. All rights reserved. Registered in
+            Georgia, USA
+          </p>
+        </footer>
       </div>
     </section>
 
