--- a/index.html
+++ b/index.html
@@ -299,6 +299,14 @@
                 <h5 class="card-title text-light mb-0 orb fs-5">Oil & Gas</h5>
               </div>
             </div>
+            <!-- <div
+  class="card flex-fill bgdark2 team-member border-2 border-dark"
+  style="min-height: 200px; background-image: url('images/oil%26gas.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;"
+>
+  <div class="card-body d-flex align-items-center justify-content-center">
+    <h5 class="card-title text-light mb-0 orb fs-5">Oil & Gas</h5>
+  </div>
+</div> -->
           </div>
 
           <div class="col d-flex">
