--- a/index.html
+++ b/index.html
@@ -406,8 +406,9 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="bgdark1 py-5 py-sm-4 py-3">
-      <div class="container">
+    <section id="contact" 
+    class="bgdark1 py-5 py-sm-4 py-3">
+      <div class="container pt-3">
         <!-- <h1 class="fw-bold mb-4 text-light d-block d-md-none">Contact &mdash;</h1> -->
         <div class="row justify-content-center">
           <div class="col-12 col-md-6 col-lg-4">
