--- a/index.html
+++ b/index.html
@@ -127,18 +127,18 @@
           <div class="row justify-content-center">
             <div class="col">
               <div class="d-flex justify-content-evenly flex-wrap">
-                <span class="fs-2" title="Taiwan">🇹🇼</span>
-                <span class="fs-2" title="Spain">🇪🇸</span>
-                <span class="fs-2" title="Canada">🇨🇦</span>
-                <span class="fs-2" title="France">🇫🇷</span>
-                <span class="fs-2" title="Germany">🇩🇪</span>
-                <span class="fs-2" title="Italy">🇮🇹</span>
-                <span class="fs-2" title="Japan">🇯🇵</span>
-                <span class="fs-2" title="United Kingdom">🇬🇧</span>
-                <span class="fs-2" title="United States">🇺🇸</span>
-                <span class="fs-2" title="China">🇨🇳</span>
-                <span class="fs-2" title="Mexico">🇲🇽</span>
-                <span class="fs-2" title="Brazil">🇧🇷</span>
+                <span class="fs-2 flag" title="Taiwan">🇹🇼</span>
+                <span class="fs-2 flag" title="Spain">🇪🇸</span>
+                <span class="fs-2 flag" title="Canada">🇨🇦</span>
+                <span class="fs-2 flag" title="France">🇫🇷</span>
+                <span class="fs-2 flag" title="Germany">🇩🇪</span>
+                <span class="fs-2 flag" title="Italy">🇮🇹</span>
+                <span class="fs-2 flag" title="Japan">🇯🇵</span>
+                <span class="fs-2 flag" title="United Kingdom">🇬🇧</span>
+                <span class="fs-2 flag" title="United States">🇺🇸</span>
+                <span class="fs-2 flag" title="China">🇨🇳</span>
+                <span class="fs-2 flag" title="Mexico">🇲🇽</span>
+                <span class="fs-2 flag" title="Brazil">🇧🇷</span>
               </div>
             </div>
           </div>
@@ -387,18 +387,18 @@
         <div class="mt-5">
           <div class="container">
             <div class="d-flex justify-content-evenly flex-wrap">
-              <span class="fs-2 flag-muted" title="Taiwan">🇹🇼</span>
-              <span class="fs-2 flag-muted" title="Spain">🇪🇸</span>
-              <span class="fs-2 flag-muted" title="Canada">🇨🇦</span>
-              <span class="fs-2 flag-muted" title="France">🇫🇷</span>
-              <span class="fs-2 flag-muted" title="Germany">🇩🇪</span>
-              <span class="fs-2 flag-muted" title="Italy">🇮🇹</span>
-              <span class="fs-2 flag-muted" title="Japan">🇯🇵</span>
-              <span class="fs-2 flag-muted" title="United Kingdom">🇬🇧</span>
-              <span class="fs-2 flag-muted" title="United States">🇺🇸</span>
-              <span class="fs-2 flag-muted" title="China">🇨🇳</span>
-              <span class="fs-2 flag-muted" title="Mexico">🇲🇽</span>
-              <span class="fs-2 flag-muted" title="Brazil">🇧🇷</span>
+              <span class="fs-2 flag-muted flag" title="Taiwan">🇹🇼</span>
+              <span class="fs-2 flag-muted flag" title="Spain">🇪🇸</span>
+              <span class="fs-2 flag-muted flag" title="Canada">🇨🇦</span>
+              <span class="fs-2 flag-muted flag" title="France">🇫🇷</span>
+              <span class="fs-2 flag-muted flag" title="Germany">🇩🇪</span>
+              <span class="fs-2 flag-muted flag" title="Italy">🇮🇹</span>
+              <span class="fs-2 flag-muted flag" title="Japan">🇯🇵</span>
+              <span class="fs-2 flag-muted flag" title="United Kingdom">🇬🇧</span>
+              <span class="fs-2 flag-muted flag" title="United States">🇺🇸</span>
+              <span class="fs-2 flag-muted flag" title="China">🇨🇳</span>
+              <span class="fs-2 flag-muted flag" title="Mexico">🇲🇽</span>
+              <span class="fs-2 flag-muted flag" title="Brazil">🇧🇷</span>
             </div>
           </div>
         </div>
